# auto_service

./: .dockerignore  .gitignore  Makefile  compose.yaml  pyproject.toml
alembic/versions/: 2024_12_13_0214-d53f24144ac1_.py  2024_12_13_0254-5961388882f1_.py
backend/: Dockerfile  pyproject.toml
backend/src/: __init__.py  app.py  settings.py  unit_of_work.py
backend/src/adapters/: filestorage.py
backend/src/adapters/database/: models.py  repositories.py
backend/src/admin/: user_custom_fastadmin.py
backend/src/admin/models/: direction.py  gallery.py  manager.py  service.py  service_request.py  student_request.py
backend/src/api/: router.py
backend/src/schemas/admin/: directions.py  managers.py  posts.py  services.py  student_requests.py  workers.py
backend/src/schemas/api/: channels.py  directions.py  service_requests.py  services.py
backend/src/service/: channel.py  direction.py  gallery.py  post.py  service_request.py
dumps/: testing.sql
frontend/: Dockerfile  package.json
frontend/src/: App.js  index.js
frontend/src/components/: 2page.js  3page.js  Educ.js  Educ_body.js  Educ_card.js  Secv_form.js  Service.js  Service_card.js  body.js  card.js  edu_form.js  firstpage.js  footer.js  header.js  mainPage.js  (+2 more)
src/: app.py  settings.py  unit_of_work.py
src/adapters/: email_sender.py  filestorage.py
src/admin/: custom_fastadmin.py  user_custom_fastadmin.py
src/api/: filestorage.py  router.py
src/service/: channel.py  direction.py  post.py  service.py  service_request.py  student_request.py
src/utils/: exceptions.py  repository.py  time.py
(+29 files in other folders)
